Mon Dec  9 10:10:38 1996  Tom Tromey  <tromey@cygnus.com>

	* inet_aton.c: Use #if 0, not #ifdef 0.

Sun Dec  8 21:06:38 1996  Jim Blandy  <jimb@duality.gnu.ai.mit.edu>

	Add new interface to catch/throw, usable from C as well as
	Scheme.
	* throw.h (scm_catch_body_t, scm_catch_handler_t): New types.
	(scm_internal_catch): New function, replaces...
	(scm_catch_apply): Deleted.
	* throw.c (scm_catch_apply): Deleted; replaced with a more general
	mechanism which is a bit more code, but can be used nicely from C
	and implement the Scheme semantics as well.
	(scm_internal_catch): This is the replacement; it's named after
	the analogous function in Emacs.
	(scm_catch): Reimplemented in terms of the above.
	(struct catch_body_data, catch_body, catch_handler): New
	functions, used by scm_catch.
	* root.c (cwdr): Reimplemented in terms of scm_internal_catch.
	(struct cwdr_body_data, cwdr_body, cwdr_handler): New functions;
	support for new cwdr.

	* Makefile.am (libpath.h): Re-incorporate Mikael's changes of Wed
	Oct 30.

Sun Dec  8 17:55:34 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* acconfig.h: Added DYNAMIC_LINKING symbol.
	* configure.in: Add option and checks for dynamic linking.
        * dynl.c, dynl-dl.c, dynl-dld.c, dynl-shl.c, dynl-vms.c,
 	dynl.h:	New files for dynamic linking support.
  	* Makefile.am (libguile_a_SOURCES):
 	Added "dynl.c".
	(modinclude_HEADERS): Added "dynl.h".
	(EXTRA_DIST): Added "dynl-dl.c", "dynl-dld.c", "dynl-shl.c" and
 	"dynl-vms.c".
  	* init.c (scm_boot_guile_1): Call
 	scm_init_dynamic_linking to initialize dynamic linking support.

Thu Dec  5 22:47:53 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* init.c (scm_boot_guile_1): Moved `live' variable to the toplevel
 	(as we Schemers say). It needs to be global, so that I can tweak
 	it for the proper operation of unexec.
	(scm_boot_guile_1_live): New variable, see above.

Sun Dec  1 00:00:49 1996  Tom Tromey  <tromey@cygnus.com>

	* guile-snarf.sh: Removed.